<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Sunshine</string>


    <string name="setting_activity">Settings</string>
    <string name="detail_activity">Detail</string>
    <string name="location_activity">Location</string>

    <!--<string name="pre_loc_key">city</string>-->
    <!--<string name="pre_loc_title">Location</string>-->

    <!-- key name for storing location status in SharedPreferences-->
    <string name="pref_location_status_key" translatable="false">loc_status</string>

    
    <!--location SharedPreferences-->
    <string name="pref_city_id_key" translatable="false">city_id</string>
    <string name="pref_city_name_key" translatable="false">city_name</string>
    <string name="pref_city_id_def" translatable="false">1255364</string>
    <string name="pref_city_name_def" translatable="false">Surat</string>
    <string name="pref_country_code_key" translatable="false">country_code</string>
    <string name="pref_country_code_def" translatable="false">In</string>

    <!--setting pref strings-->
    <string name="pre_unit_key" translatable="false">unit</string>
    <string name="pre_unit_title" translatable="false">Unit</string>
    <string name="pre_unit_def" translatable="false">metric</string>
    <string name="pref_header_title">Weather</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_units_metric_entry" translatable="false">\u00B0 C</string>
    <string name="pref_units_imperial_entry" translatable="false">\u00B0 F</string>
    <string-array name="pre_unit_entries">
        <item>@string/pref_units_metric_entry</item>
        <item>@string/pref_units_imperial_entry</item>
    </string-array>
    <string-array name="pre_unit_entryvalues">
        <item>@string/pref_units_metric</item>
        <item>@string/pref_units_imperial</item>
    </string-array>

    <!--menu items-->
    <string name="action_settings">Settings</string>
    <string name="action_location">Location</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>


    <!-- Label for the art pack preference [CHAR LIMIT=30] -->
    <string name="pref_art_pack_label">Icon Pack</string>

    <!-- Label for Sunshine option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_sunshine">Sunshine</string>

    <!-- Label for cute dogs option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_cute_dogs">Cute dogs</string>

    <!-- Key name for art pack unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_key" translatable="false">art_pack</string>

    <!-- Value in SharedPreferences for Sunshine art pack option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_sunshine" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>

    <!-- Value in SharedPreferences for cute dogs art pack  option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_cute_dogs" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-mdpi/art_%s.png</string>

    <!--formatting string-->
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <string name="wind">Wind</string>
    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph"><xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh"><xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <string name="pressure">Pressure</string>
    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <string name="humidity">Humidity</string>
    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>


    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">sunshine.parthiv.com</string>
    <string name="content_authority" translatable="false">com.parthiv.sunshine.app</string>
    <string name="sharedpref_name" translatable="false">com.parthiv.sunshine.app</string>
    <string name="title_activity_maps">Map</string>
    <string name="pref_city_lon_key" translatable="false">lon</string>
    <string name="pref_city_lat_key" translatable="false">lat</string>
    <string name="pref_city_lat_def" translatable="false">21.16667</string>
    <string name="pref_city_lon_def" translatable="false">72.833328</string>

    <string name="empty_forecast_string">No Weather Information Available</string>
    <string name="empty_forecast_no_network_string">No Internet Connection Available</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>


    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- A11y -->
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>
    <string name="a11y_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11y_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>

    <string name="cd_search_location">Search Location</string>
    <string name="cd_home">Home</string>
    <string name="cd_back">Back</string>
    <string name="fcm_weather_alert">Heads up: %1$s in %2$s!</string>



    <!-- Names of the art packs available -->
    <string-array name="pref_art_pack_options">
        <item>@string/pref_art_pack_label_sunshine</item>
        <item>@string/pref_art_pack_label_cute_dogs</item>
    </string-array>

    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <string-array name="pref_art_pack_values">
        <item>@string/pref_art_pack_sunshine</item>
        <item>@string/pref_art_pack_cute_dogs</item>
    </string-array>

</resources>
