<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<EditTextPreference-->
        <!--android:key="@string/pre_loc_key"-->
        <!--android:title="@string/pre_loc_title"-->
        <!--android:defaultValue="@string/pre_loc_def"-->
        <!--android:inputType="text"-->
        <!--android:imeOptions="actionSearch"-->
        <!--android:singleLine="true"/>-->
    <ListPreference
        android:key="@string/pre_unit_key"
        android:title="@string/pre_unit_title"
        android:defaultValue="@string/pre_unit_def"
        android:entries="@array/pre_unit_entries"
        android:entryValues="@array/pre_unit_entryvalues"/>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

    <ListPreference
        android:title="@string/pref_art_pack_label"
        android:key="@string/pref_art_pack_key"
        android:defaultValue="@string/pref_art_pack_sunshine"
        android:entryValues="@array/pref_art_pack_values"
        android:entries="@array/pref_art_pack_options" />



</PreferenceScreen>